Add Solr query arguments needed for basic operation
